--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,18 +6,17 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="com.gocantar.cassidy.example.MainActivity">
 
-    <com.cassidy.widgets.image.RoundImageView
+    <com.cassidy.widgets.image.avatar.AvatarImageView
         android:id="@+id/roundImage"
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:src="@drawable/default_avatar"
-        app:isHighlightEnable="true"
+        app:backgroundAvatarColor="@color/grey"
+        app:avatarStyle="twoInitials"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:strokeColor="@color/colorAccent"
-        app:strokeWidth="2dp" />
+        app:textSize="50sp"/>
 
     <com.cassidy.widgets.text.amount.AmountTextView
         android:id="@+id/amountLabel"
