--- a/widgets/src/main/res/values/attrs-avatar-image.xml
+++ b/widgets/src/main/res/values/attrs-avatar-image.xml
@@ -10,5 +10,9 @@
             <enum name="twoInitials" value="2"/>
             <enum name="image" value="1"/>
         </attr>
+        <attr name="backgroundBehaviour" format="enum" >
+            <enum name="fixed" value="0"/>
+            <enum name="rainbow" value="1"/>
+        </attr>
     </declare-styleable>
 </resources>
