--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,8 +13,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         app:backgroundAvatarColor="@color/grey"
-        app:avatarStyle="oneInitial"
-        app:backgroundBehaviour="fixed"
+        app:backgroundBehaviour="rainbow"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:textSize="44sp"/>
