--- a/widgets/src/main/res/values/attrs-avatar-image.xml
+++ b/widgets/src/main/res/values/attrs-avatar-image.xml
@@ -4,14 +4,15 @@
         <attr name="textSize" format="dimension" />
         <attr name="textColor" format="color" />
         <attr name="backgroundAvatarColor" format="color" />
-        <attr name="avatarStyle" format="enum" >
-            <enum name="oneInitial" value="0"/>
-            <enum name="twoInitials" value="1"/>
-            <enum name="image" value="2"/>
+        <attr name="mask" format="boolean" />
+        <attr name="avatarStyle" format="enum">
+            <enum name="oneInitial" value="0" />
+            <enum name="twoInitials" value="1" />
+            <enum name="image" value="2" />
         </attr>
-        <attr name="backgroundBehaviour" format="enum" >
-            <enum name="fixed" value="0"/>
-            <enum name="rainbow" value="1"/>
+        <attr name="backgroundBehaviour" format="enum">
+            <enum name="fixed" value="0" />
+            <enum name="rainbow" value="1" />
         </attr>
     </declare-styleable>
 </resources>
