--- a/widgets/src/main/res/values/attrs-avatar-image.xml
+++ b/widgets/src/main/res/values/attrs-avatar-image.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <declare-styleable name="AvatarImageView">
-        <attr name="textSize" format="dimension" />
-        <attr name="textColor" format="color" />
+        <attr name="labelSize" format="dimension" />
+        <attr name="labelColor" format="color" />
         <attr name="backgroundAvatarColor" format="color" />
         <attr name="mask" format="boolean" />
         <attr name="avatarStyle" format="enum">
