--- a/app/src/main/res/layout/item_view_holder.xml
+++ b/app/src/main/res/layout/item_view_holder.xml
@@ -10,19 +10,23 @@
     tools:context="com.gocantar.cassidy.example.MainActivity">
 
     <com.cassidy.widgets.image.avatar.AvatarImageView
+        android:id="@+id/avatar"
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:layout_marginEnd="8dp"
         app:avatarStyle="oneInitial"
+        app:backgroundBehaviour="rainbow"
         app:labelSize="32dp"
-        app:backgroundBehaviour="rainbow" />
+        app:mask="true" />
 
     <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/label"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="24sp"
-        android:textStyle="bold"
-        android:maxLines="1"
         android:ellipsize="end"
+        android:maxLines="1"
+        android:textColor="@color/app_text"
+        android:textSize="18sp"
+        android:textStyle="bold"
         tools:text="Timer Example" />
 </LinearLayout>
