--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimaryDark">#000000</color>
+    <color name="colorPrimaryDark">#121212</color>
+
+    <color name="app_background">#000000</color>
     <color name="app_text">#FFFFFF</color>
 </resources>
