--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,8 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#008577</color>
     <color name="colorAccent">#D81B60</color>
+
+    <color name="app_background">#FFFFFF</color>
     <color name="app_header_text">#FFFFFF</color>
     <color name="app_text">#121212</color>
 </resources>
