--- a/examples/timer/src/main/res/layout/activity_timer.xml
+++ b/examples/timer/src/main/res/layout/activity_timer.xml
@@ -7,15 +7,26 @@
     tools:context=".TimerActivity">
 
     <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/timerLabel"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
-        android:text="Coming Soon"
         android:textSize="40sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.3" />
+
+    <Button
+        android:id="@+id/startButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        style="@style/Widget.MaterialComponents.Button"
+        android:text="Start"
+        app:layout_constraintTop_toBottomOf="@+id/timerLabel" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
